# textris

./: Cargo.toml  README.md
.circleci/: config.yml
src/: action.rs  block.rs  cli.rs  color.rs  coord.rs  elapsed.rs  errors.rs  field.rs  game.rs  inputs.rs  lib.rs  main.rs  piece.rs  play.rs  screen.rs  tetromino.rs
src/inputs/: event_reader.rs  inputs.rs  keys.rs  mod.rs
