[package]
authors = ["ryym <ryym.64@gmail.com>"]
categories = ["games"]
description = "Tetris on terminal!"
keywords = ["tetris"]
license = "MIT OR Apache-2.0"
name = "textris"
repository = "https://github.com/ryym/textris"
version = "0.2.0"
edition = "2018"

[dependencies]
failure = "0.1.2"
getopts = "0.2.18"
rand = "0.5.4"
termion = "1.5.1"
